--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
     <header>
-        <div class="container mx-auto bg-color-primary my-8 p-5 rounded-full">
+        <div class="container mx-auto lg:bg-color-primary my-8 px-5 py-1 rounded-full">
             <div class="navbar flex-row-reverse justify-between lg:flex-row">
                 <div class="navbar-start justify-end lg:justify-start">
                     <div class="hidden lg:block">
@@ -52,22 +52,18 @@
                         </ul>
                     </div>
                     <div class="dropdown lg:hidden block">
-                        <label tabindex="0" class="btn btn-ghost btn-circle text-white text-2xl">
+                        <label tabindex="0" class="btn btn-ghost btn-circle text-2xl hover:text-white hover:bg-color-primary">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                 class="inline-block w-8 h-8 stroke-current">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M4 6h16M4 12h16M4 18h16"></path>
                             </svg>
                         </label>
-                        <ul tabindex="0" class="menu menu-sm dropdown-content right-0 mt-3 z-[20] p-2 bg-color-primary rounded-t-none rounded-b-lg w-52">
-                            <li><a class="text-white hover:text-white block text-right hover:bg-color-primary text-lg mt-5"
-                                    href="#">Home</a></li>
-                            <li><a class="text-white hover:text-white block text-right hover:bg-color-primary text-lg mt-5"
-                                    href="#">About Us</a></li>
-                            <li><a class="text-white hover:text-white block text-right hover:bg-color-primary text-lg mt-5"
-                                    href="#">Shop</a></li>
-                            <li><a class="text-white hover:text-white block text-right hover:bg-color-primary text-lg mt-5"
-                                    href="#">All Fruits</a></li>
+                        <ul tabindex="0" class="menu menu-sm dropdown-content right-0 mt-3 z-[20] p-2 bg-white rounded-t-none rounded-b-lg w-52">
+                            <li><a class="block text-right hover:text-color-primary hover:bg-white text-lg mt-5" href="#">Home</a></li>
+                            <li><a class="block text-right hover:text-color-primary hover:bg-white text-lg mt-5" href="#">About Us</a></li>
+                            <li><a class="block text-right hover:text-color-primary hover:bg-white text-lg mt-5" href="#">Shop</a></li>
+                            <li><a class="block text-right hover:text-color-primary hover:bg-white text-lg mt-5" href="#">All Fruits</a></li>
                         </ul>
                     </div>
                 </div>
@@ -77,7 +73,7 @@
                         <img src="./images/logo.png" alt="">
                     </div>
                     <div>
-                        <h1 class="ml-4 text-4xl text-white font-bold">Fruit Burst</h1>
+                        <h1 class="ml-4 text-4xl lg:text-white font-bold">Fruit Burst</h1>
                     </div>
                 </div>
 
@@ -101,11 +97,11 @@
         </div>
     </header>
 
-    <main>
+    <main class="px-5">
         <!-- Banner Section  -->
         <section>
             <div class="container mx-auto flex justify-center items-center text-center">
-                <div class="carousel w-full">
+                <div class="carousel w-full rounded-xl">
                     <div id="slide1"
                         class="carousel-item relative w-full bg-[url('./images/banner2.png')] bg-cover bg-no-repeat bg-center flex justify-center items-center min-h-[500px] before:content-[' '] before:absolute before:w-full before:h-full before:bg-gradient-to-b before:from-black-rgba-08 before:to-black-rgba-02">
                         <div class="z-10">
@@ -203,28 +199,28 @@
                 <div>
                     <div class="grid grid-flow-col gap-5 text-center auto-cols-max mt-10 lg:mt-0">
                         <div class="flex flex-col">
-                            <span class="countdown font-extrabold text-5xl">
+                            <span class="countdown font-extrabold text-4xl md:text-5xl">
                                 <span style="--value:29;"> </span>
                                 <img class="h-6 ml-4 mt-3" src="./images/dot3.png" alt="">
                             </span>
                             <span class="mr-[35px]"> days </span>
                         </div>
                         <div class="flex flex-col">
-                            <span class="countdown font-extrabold text-5xl">
+                            <span class="countdown font-extrabold text-4xl md:text-5xl">
                                 <span style="--value:15;"></span>
                                 <img class="h-6 ml-4 mt-3" src="./images/dot3.png" alt="">
                             </span>
                             <span class="mr-[35px]"> hours </span>
                         </div>
                         <div class="flex flex-col">
-                            <span class="countdown font-extrabold text-5xl">
+                            <span class="countdown font-extrabold text-4xl md:text-5xl">
                                 <span style="--value:25;"></span>
                                 <img class="h-6 ml-4 mt-3" src="./images/dot3.png" alt="">
                             </span>
                             <span class="mr-[35px]"> min </span>
                         </div>
                         <div class="flex flex-col">
-                            <span class="countdown font-extrabold text-5xl">
+                            <span class="countdown font-extrabold text-4xl md:text-5xl">
                                 <span style="--value:8;"></span>
                             </span>
                             <span> sec </span>
@@ -239,7 +235,7 @@
         <section>
             <div class="container mx-auto grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-3">
                 <!-- Apple  -->
-                <div class="flex justify-center items-center border m-2">
+                <div class="flex justify-center items-center border m-2 rounded-lg">
                     <div class="text-center py-8">
                         <img class="inline-block" src="./images/fruit6.png" alt="Apple">
                         <h2 class="text-2xl font-bold my-5">12.90$ - 18.85$</h2>
@@ -294,7 +290,7 @@
                 </div>
 
                 <!-- Orange -->
-                <div class="flex justify-center items-center border m-2">
+                <div class="flex justify-center items-center border m-2 rounded-lg">
                     <div class="text-center py-8">
                         <img class="inline-block" src="./images/fruit7.png" alt="Apple">
                         <h2 class="text-2xl font-bold my-5">12.90$ - 18.85$</h2>
@@ -349,7 +345,7 @@
                 </div>
 
                 <!-- Red Dragon -->
-                <div class="flex justify-center items-center border m-2">
+                <div class="flex justify-center items-center border m-2 rounded-lg">
                     <div class="text-center py-8">
                         <img class="inline-block" src="./images/fruit8.png" alt="Apple">
                         <h2 class="text-2xl font-bold my-5">12.90$ - 18.85$</h2>
@@ -405,7 +401,7 @@
                 </div>
 
                 <!-- Banana -->
-                <div class="flex justify-center items-center border m-2">
+                <div class="flex justify-center items-center border m-2 rounded-lg">
                     <div class="text-center py-8">
                         <img class="inline-block" src="./images/fruit9.png" alt="Apple">
                         <h2 class="text-2xl font-bold my-5">12.90$ - 18.85$</h2>
@@ -467,9 +463,9 @@
 
         <!-- Team Section  -->
         <section class="my-20">
-            <div class="container mx-auto bg-[url('./images/team.png')] bg-no-repeat bg-center bg-cover">
-                <div class="py-20 bg-black-rgba-06 text-white">
-                    <h1 class="font-Garamond font-extrabold text-4xl lg:text-5xl loading-[5rem] text-center">Meet the
+            <div class="container mx-auto bg-[url('./images/team.png')] bg-no-repeat bg-center bg-cover rounded-2xl">
+                <div class="py-20 bg-black-rgba-06 text-white rounded-2xl">
+                    <h1 class="font-Garamond font-extrabold text-3xl lg:text-5xl loading-[5rem] text-center">Meet the
                         team section</h1>
                     <p class="text-base my-5 w-3/4 lg:w-2/4 mx-auto text-center">Contrary to popular belief, is not
                         simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it
@@ -583,7 +579,7 @@
                     <div class="order-2 lg:order-none flex-1">
                         <div class=" text-center lg:text-left flex gap-4 flex-col lg:flex-row">
                             <div>
-                                <img class="bg-[#DFDFDF] p-[12px] rounded-full w-[70px] inline-block"
+                                <img class="bg-[#DFDFDF] p-[15px] rounded-full w-[80px] inline-block"
                                     src="./icons/group1.png" alt="Team Icon">
                             </div>
                             <div>
@@ -595,7 +591,7 @@
                         </div>
                         <div class=" text-center lg:text-left flex gap-4 flex-col lg:flex-row mt-8">
                             <div>
-                                <img class="bg-[#DFDFDF] p-[12px] rounded-full w-[70px] inline-block"
+                                <img class="bg-[#DFDFDF] p-[15px] rounded-full w-[80px] inline-block"
                                     src="./icons/love1.png" alt="Team Icon">
                             </div>
                             <div>
@@ -607,7 +603,7 @@
                         </div>
                         <div class=" text-center lg:text-left flex gap-4 flex-col lg:flex-row mt-8">
                             <div>
-                                <img class="bg-[#DFDFDF] p-[12px] rounded-full w-[70px] inline-block"
+                                <img class="bg-[#DFDFDF] p-[15px] rounded-full w-[80px] inline-block"
                                     src="./icons/gift-box1.png" alt="Team Icon">
                             </div>
                             <div>
@@ -626,7 +622,7 @@
                     <div class="order-3 lg:order-none flex-1">
                         <div class="gap-4 text-center flex flex-col lg:text-right lg:flex-row-reverse">
                             <div>
-                                <img class="bg-[#DFDFDF] p-[12px] rounded-full w-[70px] inline-block"
+                                <img class="bg-[#DFDFDF] p-[15px] rounded-full w-[80px] inline-block"
                                     src="./icons/fruit1.png" alt="Team Icon">
                             </div>
                             <div>
@@ -638,7 +634,7 @@
                         </div>
                         <div class="gap-4 text-center flex flex-col lg:text-right lg:flex-row-reverse mt-8">
                             <div>
-                                <img class="bg-[#DFDFDF] p-[12px] rounded-full w-[70px] inline-block"
+                                <img class="bg-[#DFDFDF] p-[15px] rounded-full w-[80px] inline-block"
                                     src="./icons/ice-cream1.png" alt="Team Icon">
                             </div>
                             <div>
@@ -650,7 +646,7 @@
                         </div>
                         <div class="gap-4 text-center flex flex-col lg:text-right lg:flex-row-reverse mt-8">
                             <div>
-                                <img class="bg-[#DFDFDF] p-[12px] rounded-full w-[70px] inline-block"
+                                <img class="bg-[#DFDFDF] p-[15px] rounded-full w-[80px] inline-block"
                                     src="./icons/like1.png" alt="Team Icon">
                             </div>
                             <div>
